# disaster_backend

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py  store.py
app/agents/: crisis_manager_agent.py  database_agent.py  llm.py  orchestrator.py  state.py  strategy_agent.py
app/model/: earthquake.py  fire.py  flood.py  model.py
app/optimizer/: allocation.py  impact.py  schemas.py
app/routes/: crisis.py  data.py  predict.py
app/schemas/: predict.py
app/services/: flood_river_risk.py
app/tools/: database_tools.py  graph_tools.py
data/: hospitals.json  regions.json  resources.json
